<resources>
    <string name="app_name">ParkSmart</string>
    <string name="TODO">TODO</string>
    <string name="logo">logoBanner</string>
    <string name="lot_1">Lot 1</string>
    <string name="pec_lot">PEC Lot</string>
    <string name="a_lot">A Lot</string>
    <string name="b_lot">B Lot</string>
    <string name="d_lot">D Lot</string>
    <string name="c_lot">C Lot</string>
    <string name="hello">hello</string>
    <string name="user_greeting">Hello(:</string>
    <string name="user_bad">hi</string>
    <string name="parkSpotLD">parkSpotLD</string>
</resources>
